--- a/Template Demo/css/style.css
+++ b/Template Demo/css/style.css
@@ -9869,15 +9869,18 @@ span.customSelect.changed {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-right: 5%;
+    margin-left: 5%;
 }
 
 .lineItem2 {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-right: 20px;
+    margin-right: 10px;
     margin-top: 0px;
     margin-bottom: 11px;
+    max-width: 160px;
 }
 
 .lineItem3 {
